_includes/manuals/1.5/5.2.7_cr_ovirt.md

* SPICE consoles are displayed using an HTML5 client, so no native XPI extension is necessary.

#### Image provisioning

Image based provisioning can be used by provisioning a VM with a template and then running a finish script over SSH, in the same manner as the EC2 provider.  The type of provisioning method can be selected under the "Operating system" tab when creating a new host.  To configure image/template-based provisioning:

* Images refer to templates and can be added by navigating to the compute resource and clicking *New Image*.
* The image ID refers to the UUID of the image, available in the source of the list of templates on the New Host form (see [#4422](http://projects.theforeman.org/issues/4422).
* The template needs to have a username and password set up for Foreman to SSH in after provisioning and run the finish script.
* This requires some form of DHCP orchestration for SSH access to the newly created host to work.
* A finish template to perform any post-build actions (e.g. setting up Puppet) must also be associated to the host, usually by changing the OS default finish template.
