_includes/manuals/3.14/5.2.7_cr_ovirt.md

* SPICE consoles are displayed using an HTML5 client, so no native XPI extension is necessary.

#### Image provisioning

Image based provisioning can be used by provisioning a VM with a template and then running a finish script over SSH, in the same manner as the EC2 provider.  The type of provisioning method can be selected under the "Operating system" tab when creating a new host.  To configure image/template-based provisioning:

* Images refer to templates and can be added by navigating to the compute resource and clicking *New Image*.
* The template needs to have a username and password set up for Foreman to SSH in after provisioning and run the finish script.
* This requires some form of DHCP orchestration for SSH access to the newly created host to work.
* A finish template to perform any post-build actions (e.g. setting up Puppet) must also be associated to the host, usually by changing the OS default finish template.

#### Permissions required

When defining a compute resource you have to provide a user account used for communication with oVirt. It must have Admin account type role(s) with following permissions:

* System
	* Configure System
		* Login Pemissions

* Network
	* Configure vNIC Profile
		* Create
		* Edit Properties
		* Delete
		* Assign vNIC Profile to VM
		* Assign vNIC Profile to Template

* Template
	* Provisioning Operations
		* Import/Export

* VM
	* Provisioning Operations
		* Create
		* Delete
		* Import/Export
		* Edit Storage

* Disk 
	* Provisioning Operations
		* Create
	* Disk Profile
		* Attach Disk Profile
